deploy-medisupply/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-root-to-login
  namespace: medisupply
spec:
  redirectRegex:
    regex: ^/$
    replacement: /login
    permanent: false
---
# --- Middlewares: quitan los prefijos  /roles ---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-roles
  namespace: medisupply
spec:
  stripPrefix:
    prefixes: ["/roles"]

---
# --- Middleware: quita el prefijo /crm ---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-crm
  namespace: medisupply
spec:
  stripPrefix:
    prefixes: ["/crm"]

---
# --- Middleware: quita el prefijo /managers ---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-managers
  namespace: medisupply
spec:
  stripPrefix:
    prefixes: ["/managers"]
---
# --- Middleware: quita el prefijo /video ---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-video
  namespace: medisupply
spec:
  stripPrefix:
    prefixes: ["/video"]
---
# --- IngressRoute (entryPoint "web" = :80) ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: medisupply-ingressroute
  namespace: medisupply
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/auth`)
      services:
        - name: auth-service   # EXISTE
          port: 9001
    - kind: Rule
      match: PathPrefix(`/roles`)
      middlewares:
        - name: strip-roles
      services:
        - name: roles-api      # EXISTE
          port: 9003
    - kind: Rule
      match: PathPrefix(`/`)   
      middlewares:
        - name: redirect-root-to-login   
      services:
        - name: web-portal
          port: 80
    - kind: Rule
      match: PathPrefix(`/crm`)
      middlewares:
        - name: strip-crm
      services:
        - name: crm-service      # EXISTE
          port: 9004
    - kind: Rule
      match: PathPrefix(`/managers`)
      middlewares:
        - name: strip-managers
      services:
        - name: managers-service      # EXISTE
          port: 9005
    - kind: Rule
      match: PathPrefix(`/video`)
      middlewares:
        - name: strip-video
      services:
        - name: video-api      # EXISTE
          port: 9020
